# fastid

./: .codespell-whitelist.txt  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  404.html  CITATION.cff  Makefile  README.md  SECURITY.md  alembic.ini  docker-compose-prod.yml  docker-compose.dev.yml  docker-compose.example.yml  docker-compose.observability.yml  docker-compose.prod.yml  docker-compose.yml  index.html  logging.yaml  pyproject.toml  sitemap.xml  skills-lock.json
.github/workflows/: deploy.yaml  deploy.yml  dockerhub.yml  docs.yml  smokeshow.yml  test.yml
app/: __init__.py
app/admin/: auth.py  config.py  main.py  views.py
app/api/: background.py  config.py  cors.py  exceptions.py  factory.py  lifespan.py  main.py  public.py  routing.py  testing.py
app/apps/: config.py  dependencies.py  exceptions.py  models.py  repositories.py  router.py  schemas.py  service.py
app/auth/: admin_router.py  backend.py  config.py  dangerous_router.py  dependencies.py  exceptions.py  fastapi.py  grants.py  models.py  permissions.py  repositories.py  router.py  schemas.py  service.py  utils.py
app/authlib/: backend.py  config.py  dependencies.py  exceptions.py  oauth.py  openid.py  schemas.py  tokens.py  transports.py
app/base/: datatypes.py  models.py  pagination.py  repository.py  schemas.py  service.py  sorting.py  types.py  uow.py
app/cache/: adapter.py  config.py  dependencies.py  exceptions.py
app/cli/: __main__.py  app.py  main.py  service.py
app/db/: __init__.py  base.py  config.py  connection.py  dependencies.py  exceptions.py  models.py  repository.py  specification.py  uow.py
app/domain/: pagination.py  repository.py  schemas.py  service.py  sorting.py  types.py  uow.py
app/frontend/: auth.py  dependencies.py  exceptions.py  main.py  openid.py  pages.py  templating.py
app/logging/: dependencies.py  provider.py
app/mail/: client.py  config.py  schemas.py
app/main/: app.py  config.py  factory.py  logging.py  main.py  modules.py  workers.py
app/notifications/: exceptions.py  router.py  schemas.py  service.py
app/notifier/: adapter.py  base.py  dependencies.py  mail.py  router.py  templates.py
app/notify/: adapters.py  base.py  config.py  dependencies.py  exceptions.py  mail.py  notifications.py  router.py  schemas.py  service.py  telegram.py
app/notifylib/: adapter.py  base.py  config.py  dependencies.py  mail.py  schemas.py  telegram.py  templates.py
app/oauth/: accounts_router.py  config.py  dependencies.py  exceptions.py  login_router.py  models.py  providers.py  registry.py  repositories.py  router.py  schemas.py  service.py
app/oauthlib/: base.py  config.py  dependencies.py  exceptions.py  google.py  httpx.py  httpx_integration.py  interfaces.py  registry.py  schemas.py  telegram.py  yandex.py
app/obs/: config.py  logger.py  metrics.py  panels.py  prometheus.py  tracing.py
app/observability/: config.py  metrics.py  setup.py
app/plugins/: base.py  config.py  cors.py
app/profile/: admin_router.py  dependencies.py  router.py  service.py
app/public/: router.py
app/runner/: api.py  config.py  cors.py  exceptions.py  main.py  routing.py  testing.py
app/security/: jwt.py
app/social/: dangerous_router.py  dependencies.py  repositories.py  router.py  service.py
app/social_login/: dangerous_router.py  dependencies.py  exceptions.py  models.py  repositories.py  router.py  schemas.py  service.py
app/telegram/: dependencies.py
app/testing/: app.py  main.py
app/utils/: background.py  templating.py
assets/javascripts/: custom.js
client/: app.py  config.py
docker/: Dockerfile  entrypoint-dev.sh  entrypoint.sh  fastapi.Dockerfile
docs/: glossary.md  mkdocs.yml
docs/adr/: 0001-use-standard-webhook-headers.md  0002-provide-tiered-webhook-receiver-examples.md
docs/docs/: api.md  overview.md  start.md
examples/: config.py  fastlink.py  httpx.py  webhook_advanced.py  webhook_quickstart.py
fastid/admin/: app.py  auth.py  config.py  factory.py  views.py
fastid/api/: app.py  config.py  exceptions.py  factory.py  lifespan.py  mini_app.py  routing.py
fastid/apps/: dependencies.py  exceptions.py  models.py  repositories.py  router.py  schemas.py  use_cases.py
fastid/auth/: config.py  dependencies.py  exceptions.py  grants.py  models.py  permissions.py  repositories.py  router.py  schemas.py  server.py  use_cases.py  utils.py
fastid/cache/: config.py  dependencies.py  exceptions.py  locks.py  storage.py
fastid/core/: app.py  base.py  config.py  dependencies.py  lifespan.py  mini_apps.py  schemas.py  timer.py  urls.py  workers.py
fastid/dashboard/: app.py  auth.py  config.py  mini_app.py  views.py
fastid/database/: alembic.py  base.py  config.py  dependencies.py  models.py  repository.py  schemas.py  specification.py  uow.py  utils.py  versioning.py
fastid/email/: config.py  dependencies.py
fastid/frontend/: app.py  dependencies.py  exceptions.py  factory.py  openid.py  router.py
fastid/integrations/: config.py  dependencies.py  exceptions.py  registries.py  schemas.py  utils.py
fastid/notify/: config.py  dependencies.py  exceptions.py  models.py  repositories.py  router.py  schemas.py  templating.py  use_cases.py  utils.py
fastid/oauth/: config.py  dependencies.py  exceptions.py  metadata.py  models.py  repositories.py  router.py  schemas.py  use_cases.py
fastid/pages/: app.py  dependencies.py  mini_app.py  openid.py  router.py
fastid/profile/: dependencies.py  router.py  use_cases.py
fastid/security/: crypto.py  exceptions.py  jwt.py  manager.py  schemas.py  transport.py  webhooks.py
fastid/superuser/: router.py
fastid/webhooks/: config.py  dependencies.py  metrics.py  models.py  repositories.py  router.py  schemas.py  use_cases.py  worker.py
migrations/: env.py
migrations/versions/: 2024_08_07_2001-590f147f3dca_.py  2024_09_05_2030-5ee810fadd8e_.py  2024_09_05_2037-7eb88ab78714_.py  (+24 more)
overview/: index.html
search/: search_index.json
test_client/: app.py  config.py
tests/: config.py  conftest.py  dependencies.py  mocks.py
tutorial/: index.html
(+172 files in other folders)
